spring-demo/app-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
      - image: surendrakumar/spring-mysql:v3
        imagePullPolicy: IfNotPresent
        name: spring-docker
