spring-demo/app-service.yml
apiVersion: v1
kind: Service
metadata:
 name: web-service
 labels:
   name: web-service
spec:
 type: LoadBalancer
 ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
 selector:
   name: web
