spring-demo/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: emysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
    tier: mysql
  clusterIP: None
